describe page accueil

--- a/index.html
+++ b/index.html
@@ -5,13 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Cabinet de Cardiologie Andiologie Pulmo </title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
+
+
 <body>
-    <h1>test google fonts
-    </h1>
+    <header>
+        <h2>Cabinet cardiologie-angiologie </h2>
+        <h1>Pulmo </h1>
+
+        <nav>
+            <ul>
+                <li class="accueil-page">
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li class="about-page">
+                    <a href="about.html">À propos</a>
+                </li>
+                <li class="cardiologie-page">
+                    <a href="cardiologie.html">Cardiologie</a>
+                </li>
+                <li class="angiologie-page">
+                    <a href="angiologie.html">Angiologie</a>
+                </li>
+
+                <li class="urgence-page">
+                    <a href="urgence.html">Urgences</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <body>
+        <nav class="rdv-cntct">
+            <ul>
+                <li class="contact-page">
+                    <a href="contact.html">contactez-nous</a>
+                </li>
+                <li class="rdv-page">
+                    <a href="rdv.html">Rendez vous</a>
+                </li>
+            </ul>
+        </nav>
+
+    </body>
+    <footer>
+        <img src="web.png" alt="logo">
+        <p class="footer">ce sites est un projet d'apprentissage promotion YES WE WEB </p>
+
+    </footer>
+
 </body>
 
 </html>
