--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+e
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    s
+    <!--describe header page "tittle and nav calss"  -->
     <header>
-        <h1>Pulmo </h1>
-        <h2>Cabinet cardiologie-angiologie </h2>
+        <h1>Cabinet cardiologie-angiologie </h1>
+        <h2>Pulmo </h2>
         <nav class="header-page">
             <ul>
                 <li class="accueil-page">
