add folder in fild

--- a/cardiologie.html
+++ b/cardiologie.html
@@ -40,6 +40,12 @@
             </ul>
         </nav>
     </header>
+    <main></main>
+    <footer>
+        <img src="web.png" alt="logo">
+        <p class="footer">ce sites est un projet d'apprentissage promotion YES WE WEB </p>
+
+    </footer>
 
 </body>
 
