--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
         <h1>Pulmo </h1>
         <h2>Cabinet cardiologie-angiologie </h2>
-        <nav class="header-page">
+        <nav class="header">
             <ul>
                 <li class="accueil-page">
                     <a href="index.html">Accueil</a>
@@ -38,7 +40,17 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5065.950212861453!2d3.118656!3d50.590416!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d6f35265a399%3A0x90bd89b34429efcd!2s2+Boulevard+Thomson%2C+59810+Lesquin!5e0!3m2!1sfr!2sfr!4v1566254282871!5m2!1sfr!2sfr"
+                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </section>
+    </main>
+    <footer>
+        <img src="web.png" alt="logo">
+        <p class="footer">ce sites est un projet d'apprentissage promotion YES WE WEB </p>
 
+    </footer>
 </body>
 
 </html>
