--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
     <title>Cabinet de Cardiologie Andiologie Pulmo </title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+
 </head>
 
 
 
 <body>
     <header>
-        <h2>Cabinet cardiologie-angiologie </h2>
         <h1>Pulmo </h1>
-
+        <h2>Cabinet cardiologie-angiologie </h2>
         <nav>
             <ul>
-                <li class="accueil-page">
+                <li>
                     <a href="index.html">Accueil</a>
                 </li>
-                <li class="about-page">
+                <li>
                     <a href="about.html">À propos</a>
                 </li>
-                <li class="cardiologie-page">
+                <li>
                     <a href="cardiologie.html">Cardiologie</a>
                 </li>
-                <li class="angiologie-page">
+                <li>
                     <a href="angiologie.html">Angiologie</a>
                 </li>
-
-                <li class="urgence-page">
-                    <a href="urgence.html">Urgences</a>
+                <li>
+                    <a href="contact.html">contactez-nous</a>
                 </li>
+
             </ul>
         </nav>
     </header>
+    <main>
 
-    <body>
-        <nav class="rdv-cntct">
-            <ul>
-                <li class="contact-page">
+        <nav>
+            <ul class="body">
+                <li>
                     <a href="contact.html">contactez-nous</a>
                 </li>
-                <li class="rdv-page">
+                <li>
                     <a href="rdv.html">Rendez vous</a>
                 </li>
             </ul>
         </nav>
+    </main>
 
-    </body>
     <footer>
         <img src="web.png" alt="logo">
         <p class="footer">ce sites est un projet d'apprentissage promotion YES WE WEB </p>
