--- a/urgence.html
+++ b/urgence.html
@@ -6,38 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
         <h1>Pulmo </h1>
         <h2>Cabinet cardiologie-angiologie </h2>
-        <nav class="header-page">
+        <nav>
             <ul>
-                <li class="accueil-page">
+                <li>
                     <a href="index.html">Accueil</a>
                 </li>
-                <li class="about-page">
+                <li>
                     <a href="about.html">À propos</a>
                 </li>
-                <li class="cardiologie-page">
+                <li>
                     <a href="cardiologie.html">Cardiologie</a>
                 </li>
-                <li class="angiologie-page">
+                <li>
                     <a href="angiologie.html">Angiologie</a>
                 </li>
-                <li class="contact-page">
+                <li>
                     <a href="contact.html">contactez-nous</a>
                 </li>
-                <li class="rdv-page">
+                <li>
                     <a href="rdv.html">Rendez vous</a>
                 </li>
-                <li class="urgence-page">
+                <li>
                     <a href="urgence.html">Urgences</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <main></main>
+    <footer>
+        <img src="web.png" alt="logo">
+        <p class="footer">ce sites est un projet d'apprentissage promotion YES WE WEB </p>
+
+    </footer>
 
 </body>
 
