--- a/about.html
+++ b/about.html
@@ -12,38 +12,43 @@ e
 </head>
 
 <body>
-    s
+
     <!--describe header page "tittle and nav calss"  -->
     <header>
-        <h1>Cabinet cardiologie-angiologie </h1>
-        <h2>Pulmo </h2>
-        <nav class="header-page">
+        <h1>Pulmo </h1>
+        <h2>Cabinet cardiologie-angiologie </h2>
+        <nav>
             <ul>
-                <li class="accueil-page">
+                <li>
                     <a href="index.html">Accueil</a>
                 </li>
-                <li class="about-page">
+                <li>
                     <a href="about.html">À propos</a>
                 </li>
-                <li class="cardiologie-page">
+                <li>
                     <a href="cardiologie.html">Cardiologie</a>
                 </li>
-                <li class="angiologie-page">
+                <li>
                     <a href="angiologie.html">Angiologie</a>
                 </li>
-                <li class="contact-page">
+                <li>
                     <a href="contact.html">contactez-nous</a>
                 </li>
-                <li class="rdv-page">
+                <li>
                     <a href="rdv.html">Rendez vous</a>
                 </li>
-                <li class="urgence-page">
+                <li>
                     <a href="urgence.html">Urgences</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <main></main>
+    <footer>
+        <img src="web.png" alt="logo">
+        <p class="footer">ce sites est un projet d'apprentissage promotion YES WE WEB </p>
 
+    </footer>
 </body>
 
 </html>
